force-app/main/default/objects/BundleProductMap__mdt/BundleProductMap__mdt.object-meta.xml
<CustomObject>
    <label>BundleProductMap</label>
    <pluralLabel>BundleProductMaps</pluralLabel>
</CustomObject>