force-app/main/default/objects/BundleProductMap__mdt/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <label>Bundle Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHR-SMW-HMW</fullName>
                <default>true</default>
                <label>CHR-SMW-HMW</label>
            </value>
            <value>
                <fullName>CHR-SMW-HAW</fullName>
            </value>
            <value>
                <fullName>CHR-SMW-HAS</fullName>
            </value>
            <value>
                <fullName>CHR-SAW-HMW</fullName>
            </value>
            <value>
                <fullName>CHR-SAW-HAW</fullName>
            </value>
            <value>
                <fullName>CHR-SAW-HAS</fullName>
            </value>
            <value>
                <fullName>BLK-SMW-HMW</fullName>
            </value>
            <value>
                <fullName>BLK-SMW-HAW</fullName>
            </value>
            <value>
                <fullName>BLK-SMW-HAS</fullName>
            </value>
            <value>
                <fullName>BLK-SAW-HMW</fullName>
            </value>
            <value>
                <fullName>BLK-SAW-HAW</fullName>
            </value>
            <value>
                <fullName>BLK-SAW-HAS</fullName>
            </value>
            <value>
                <fullName>WHT-SMW-HMW</fullName>
            </value>
            <value>
                <fullName>WHT-SMW-HAW</fullName>
            </value>
            <value>
                <fullName>WHT-SMW-HAS</fullName>
            </value>
            <value>
                <fullName>WHT-SAW-HMW</fullName>
            </value>
            <value>
                <fullName>WHT-SAW-HAW</fullName>
            </value>
            <value>
                <fullName>WHT-SAW-HAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>