force-app/main/default/objects/BundleProductMap__mdt/fields/installation_price__c.field-meta.xml
<CustomField>
    <fullName>installation_price__c</fullName>
    <label>installation price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>