force-app/main/default/objects/BundleProductMap__mdt/fields/Product_Ex_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Ex_Id__c</fullName>
    <label>Product Ex Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>