force-app/main/default/objects/BundleProductMap__mdt/fields/related_product_ext_id__c.field-meta.xml
<CustomField>
    <fullName>related_product_ext_id__c</fullName>
    <label>related product ext id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>