force-app/main/default/objects/BundleProductMap__mdt/fields/service_frequency__c.field-meta.xml
<CustomField>
    <fullName>service_frequency__c</fullName>
    <label>service frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>